# eigent-health-team

./: .dockerignore  .env.example  .gitignore  Dockerfile  EIGENT_GAP_ANALYSIS.md  README.md  STUDY_GUIDE.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: db.py  events.py  mcp_manager.py  personal_entities.py  profile_synthesis.py  runner.py  server.py
backend/routers/: events.py  memory_graph.py
data/: health_graph.yaml  kb_sources.txt
electron/: README.md  backend_entry.py  electron-builder.yml  healthos-backend.spec  package-lock.json  package.json  tsconfig.json
electron/src/: main.ts  preload.ts  tray.ts
evals/: cost_table.py  llm_judge.py
frontend/: DESIGN (5).md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  Layout.tsx  index.css  main.tsx  store.ts
frontend/src/components/: AgentQuestionModal.tsx  AgentTimeline.tsx  ApprovalModal.tsx  BiomarkerTable.tsx  CalendarStrip.tsx  CommandPalette.tsx  Gate.tsx  MemoPanel.tsx  OnboardingModal.tsx  ParserNode.tsx  (+4 more)
mcp_servers/: __main__.py  health_kb_server.py
outputs/: 2026-05-18T18-17-aipowered-meal-planning-app-for.md  2026-05-18T18-37-a-personalized-health-ai-sysystem.md  2026-05-18T18-55-websites-store-their-content-in.md  2026-05-19T15-31-34-software-engineer-sit-all.md  2026-05-19T18-40-34-software-engineer-sit-all.md
scripts/: ingest_kb.py  init_db.py  seed_memory_demo.py
src/: agents.py  graph_rag.py  lab_parser.py  main.py  model_config.py  rag.py  schema.py  workforce.py
tests/: test_smoke.py
(+22 files in other folders)
