[project]
name = "eigent-startup-team"
version = "0.1.0"
description = "A four-agent CAMEL Workforce that turns a startup idea into a structured market memo."
requires-python = ">=3.10"
dependencies = [
    "camel-ai>=0.2.90",
    "openai>=2.0",
    "ddgs>=9.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
]

[tool.uv]
package = false
